[gd_scene load_steps=9 format=3 uid="uid://27bpbsyfxjbs"]

[ext_resource type="Script" path="res://Script/tombol.gd" id="1_n0lr4"]
[ext_resource type="PackedScene" uid="uid://b8230pyph27u" path="res://Scene/interactable.tscn" id="2_fx8x1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ku3hb"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.376454, 0.382006, 0.382006, 1)
metallic = 0.427273
roughness = 0.327273

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ivttp"]
resource_name = "Material.001"
cull_mode = 2
albedo_color = Color(0.906332, 0.0323827, 0, 1)
metallic = 0.427273
roughness = 0.213636

[sub_resource type="ArrayMesh" id="ArrayMesh_51bwy"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.89031, 2),
"format": 34896613377,
"index_count": 78,
"index_data": PackedByteArray(3, 0, 9, 0, 8, 0, 3, 0, 7, 0, 9, 0, 7, 0, 11, 0, 9, 0, 7, 0, 5, 0, 11, 0, 5, 0, 3, 0, 1, 0, 5, 0, 7, 0, 3, 0, 1, 0, 8, 0, 10, 0, 1, 0, 3, 0, 8, 0, 5, 0, 10, 0, 11, 0, 5, 0, 1, 0, 10, 0, 12, 0, 9, 0, 13, 0, 12, 0, 8, 0, 9, 0, 14, 0, 8, 0, 12, 0, 14, 0, 10, 0, 8, 0, 13, 0, 11, 0, 15, 0, 13, 0, 9, 0, 11, 0, 15, 0, 10, 0, 14, 0, 15, 0, 11, 0, 10, 0, 2, 0, 13, 0, 6, 0, 2, 0, 12, 0, 13, 0, 0, 0, 12, 0, 2, 0, 0, 0, 14, 0, 12, 0, 6, 0, 15, 0, 4, 0, 6, 0, 13, 0, 15, 0, 4, 0, 14, 0, 0, 0, 4, 0, 15, 0, 14, 0),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(229, 177, 254, 255, 25, 78, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 229, 177, 254, 255, 229, 177, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 25, 78, 254, 255, 25, 78, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 25, 78, 254, 255, 229, 177, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 36, 177, 255, 255, 0, 0, 0, 0, 36, 177, 255, 255, 0, 0, 255, 255, 36, 177, 0, 0, 0, 0, 0, 0, 36, 177, 0, 0, 0, 0, 222, 210, 254, 255, 222, 210, 0, 0, 32, 45, 254, 255, 222, 210, 0, 0, 222, 210, 254, 255, 32, 45, 0, 0, 32, 45, 254, 255, 32, 45, 0, 0)
}, {
"aabb": AABB(-0.736001, -0.484477, -0.736001, 1.472, 4.14875, 1.472),
"format": 34896613377,
"index_count": 108,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 9, 0, 4, 0, 8, 0, 9, 0, 5, 0, 4, 0, 11, 0, 7, 0, 10, 0, 11, 0, 6, 0, 7, 0, 8, 0, 6, 0, 11, 0, 8, 0, 4, 0, 6, 0, 10, 0, 5, 0, 9, 0, 10, 0, 7, 0, 5, 0, 1, 0, 14, 0, 0, 0, 1, 0, 12, 0, 14, 0, 0, 0, 15, 0, 2, 0, 0, 0, 14, 0, 15, 0, 9, 0, 19, 0, 10, 0, 9, 0, 16, 0, 19, 0, 10, 0, 17, 0, 11, 0, 10, 0, 19, 0, 17, 0, 15, 0, 16, 0, 13, 0, 15, 0, 19, 0, 16, 0, 12, 0, 17, 0, 14, 0, 12, 0, 18, 0, 17, 0, 14, 0, 19, 0, 15, 0, 14, 0, 17, 0, 19, 0, 13, 0, 18, 0, 12, 0, 13, 0, 16, 0, 18, 0, 8, 0, 16, 0, 9, 0, 8, 0, 18, 0, 16, 0, 11, 0, 18, 0, 8, 0, 11, 0, 17, 0, 18, 0, 2, 0, 13, 0, 3, 0, 2, 0, 15, 0, 13, 0, 3, 0, 12, 0, 1, 0, 3, 0, 13, 0, 12, 0),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray(87, 204, 0, 0, 167, 51, 0, 0, 87, 204, 0, 0, 87, 204, 0, 0, 167, 51, 0, 0, 167, 51, 0, 0, 167, 51, 0, 0, 87, 204, 0, 0, 87, 204, 255, 255, 87, 204, 0, 0, 167, 51, 255, 255, 87, 204, 0, 0, 87, 204, 255, 255, 167, 51, 0, 0, 167, 51, 255, 255, 167, 51, 0, 0, 87, 204, 255, 127, 87, 204, 0, 0, 167, 51, 255, 127, 87, 204, 0, 0, 167, 51, 255, 127, 167, 51, 0, 0, 87, 204, 255, 127, 167, 51, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 127, 255, 255, 0, 0, 255, 255, 255, 127, 0, 0, 0, 0, 255, 255, 255, 127, 255, 255, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_eq530"]
resource_name = "tombol_Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.89031, 2),
"attribute_data": PackedByteArray(133, 179, 121, 108, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 133, 179, 134, 83, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 120, 204, 121, 108, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 120, 204, 134, 83, 255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 255, 255, 223, 255, 63, 255, 159, 0, 0, 255, 223, 255, 63, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 191, 255, 223, 255, 127, 255, 159, 255, 191, 255, 223, 255, 127, 71, 171, 71, 75, 71, 171, 71, 75, 71, 171, 71, 75, 183, 212, 71, 75, 183, 212, 71, 75, 183, 212, 71, 75, 71, 171, 183, 116, 71, 171, 183, 116, 71, 171, 183, 116, 183, 212, 183, 116, 183, 212, 183, 116, 183, 212, 183, 116),
"format": 34896613399,
"index_count": 78,
"index_data": PackedByteArray(6, 0, 22, 0, 16, 0, 6, 0, 15, 0, 22, 0, 13, 0, 28, 0, 20, 0, 13, 0, 9, 0, 28, 0, 10, 0, 5, 0, 1, 0, 10, 0, 14, 0, 5, 0, 3, 0, 19, 0, 27, 0, 3, 0, 7, 0, 19, 0, 11, 0, 24, 0, 30, 0, 11, 0, 2, 0, 24, 0, 32, 0, 23, 0, 36, 0, 32, 0, 17, 0, 23, 0, 40, 0, 18, 0, 34, 0, 40, 0, 26, 0, 18, 0, 35, 0, 29, 0, 41, 0, 35, 0, 21, 0, 29, 0, 42, 0, 25, 0, 38, 0, 42, 0, 31, 0, 25, 0, 4, 0, 37, 0, 12, 0, 4, 0, 33, 0, 37, 0, 0, 0, 33, 0, 4, 0, 0, 0, 39, 0, 33, 0, 12, 0, 43, 0, 8, 0, 12, 0, 37, 0, 43, 0, 8, 0, 39, 0, 0, 0, 8, 0, 43, 0, 39, 0),
"material": SubResource("StandardMaterial3D_ku3hb"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray(229, 177, 254, 255, 25, 78, 255, 255, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 84, 213, 229, 177, 254, 255, 229, 177, 255, 255, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 84, 213, 25, 78, 254, 255, 25, 78, 255, 255, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 25, 78, 254, 255, 229, 177, 255, 255, 0, 0, 0, 0, 255, 255, 84, 213, 0, 0, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 255, 255, 36, 177, 255, 255, 255, 191, 255, 255, 36, 177, 255, 255, 255, 255, 255, 255, 36, 177, 255, 255, 176, 222, 255, 255, 36, 177, 255, 255, 84, 213, 0, 0, 36, 177, 255, 255, 84, 213, 0, 0, 36, 177, 255, 255, 176, 222, 0, 0, 36, 177, 255, 255, 255, 191, 0, 0, 36, 177, 255, 255, 255, 255, 255, 255, 36, 177, 0, 0, 255, 255, 255, 255, 36, 177, 0, 0, 255, 255, 255, 255, 36, 177, 0, 0, 176, 222, 255, 255, 36, 177, 0, 0, 84, 213, 0, 0, 36, 177, 0, 0, 84, 213, 0, 0, 36, 177, 0, 0, 176, 222, 0, 0, 36, 177, 0, 0, 255, 255, 0, 0, 36, 177, 0, 0, 255, 255, 222, 210, 254, 255, 222, 210, 255, 255, 222, 210, 254, 255, 222, 210, 255, 255, 222, 210, 254, 255, 222, 210, 176, 222, 32, 45, 254, 255, 222, 210, 176, 222, 32, 45, 254, 255, 222, 210, 255, 255, 32, 45, 254, 255, 222, 210, 255, 255, 222, 210, 254, 255, 32, 45, 255, 255, 222, 210, 254, 255, 32, 45, 255, 255, 222, 210, 254, 255, 32, 45, 176, 222, 32, 45, 254, 255, 32, 45, 176, 222, 32, 45, 254, 255, 32, 45, 255, 255, 32, 45, 254, 255, 32, 45, 255, 255, 255, 127, 255, 191, 0, 0, 255, 127, 255, 191, 255, 191, 170, 42, 170, 42, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 170, 42, 170, 42, 255, 127, 255, 191, 84, 213, 84, 213, 0, 0, 255, 127, 255, 191, 255, 191, 255, 127, 255, 191, 84, 213, 84, 213, 0, 0, 255, 127, 255, 255, 255, 255, 255, 255, 255, 255, 255, 127, 129, 148, 196, 47, 118, 32, 170, 42, 170, 42, 84, 213, 84, 213, 137, 95, 196, 175, 255, 255, 255, 255, 255, 127, 129, 148, 255, 191, 255, 191, 255, 127, 124, 235, 196, 47, 118, 32, 170, 42, 170, 42, 84, 213, 84, 213, 137, 95, 196, 175, 255, 191, 255, 191, 255, 127, 124, 235, 255, 127, 129, 148, 255, 127, 255, 191, 196, 47, 118, 32, 137, 95, 196, 175, 255, 127, 129, 148, 255, 127, 255, 191, 255, 127, 124, 235, 255, 127, 255, 191, 196, 47, 118, 32, 137, 95, 196, 175, 255, 127, 124, 235, 255, 127, 255, 191)
}, {
"aabb": AABB(-0.736001, -0.484477, -0.736001, 1.472, 4.14875, 1.472),
"attribute_data": PackedByteArray(133, 179, 121, 108, 133, 179, 134, 83, 120, 204, 121, 108, 120, 204, 134, 83, 133, 179, 134, 83, 133, 179, 134, 83, 133, 179, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 133, 179, 121, 108, 133, 179, 121, 108, 133, 179, 121, 108, 120, 204, 121, 108, 120, 204, 121, 108, 120, 204, 121, 108, 133, 179, 134, 83, 133, 179, 134, 83, 133, 179, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 120, 204, 121, 108, 120, 204, 121, 108, 120, 204, 121, 108, 133, 179, 121, 108, 133, 179, 121, 108, 133, 179, 121, 108, 133, 179, 134, 83, 133, 179, 134, 83, 133, 179, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 133, 179, 121, 108, 133, 179, 121, 108, 133, 179, 121, 108, 120, 204, 121, 108, 120, 204, 121, 108, 120, 204, 121, 108, 120, 204, 134, 83, 120, 204, 134, 83, 120, 204, 134, 83, 133, 179, 121, 108, 133, 179, 121, 108, 133, 179, 121, 108, 133, 179, 134, 83, 133, 179, 134, 83, 133, 179, 134, 83, 120, 204, 121, 108, 120, 204, 121, 108, 120, 204, 121, 108),
"format": 34896613399,
"index_count": 108,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 11, 0, 9, 0, 15, 0, 11, 0, 5, 0, 9, 0, 20, 0, 4, 0, 16, 0, 20, 0, 8, 0, 4, 0, 25, 0, 14, 0, 23, 0, 25, 0, 10, 0, 14, 0, 18, 0, 12, 0, 27, 0, 18, 0, 6, 0, 12, 0, 22, 0, 7, 0, 19, 0, 22, 0, 13, 0, 7, 0, 1, 0, 34, 0, 0, 0, 1, 0, 28, 0, 34, 0, 0, 0, 38, 0, 2, 0, 0, 0, 34, 0, 38, 0, 21, 0, 51, 0, 24, 0, 21, 0, 42, 0, 51, 0, 24, 0, 44, 0, 26, 0, 24, 0, 51, 0, 44, 0, 37, 0, 40, 0, 31, 0, 37, 0, 49, 0, 40, 0, 30, 0, 45, 0, 36, 0, 30, 0, 48, 0, 45, 0, 35, 0, 50, 0, 39, 0, 35, 0, 43, 0, 50, 0, 33, 0, 46, 0, 29, 0, 33, 0, 41, 0, 46, 0, 17, 0, 42, 0, 21, 0, 17, 0, 47, 0, 42, 0, 26, 0, 47, 0, 17, 0, 26, 0, 44, 0, 47, 0, 2, 0, 32, 0, 3, 0, 2, 0, 38, 0, 32, 0, 3, 0, 28, 0, 1, 0, 3, 0, 32, 0, 28, 0),
"material": SubResource("StandardMaterial3D_ivttp"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 52,
"vertex_data": PackedByteArray(87, 204, 0, 0, 167, 51, 0, 0, 87, 204, 0, 0, 87, 204, 0, 0, 167, 51, 0, 0, 167, 51, 0, 0, 167, 51, 0, 0, 87, 204, 0, 0, 87, 204, 255, 255, 87, 204, 254, 127, 87, 204, 255, 255, 87, 204, 255, 255, 87, 204, 255, 255, 87, 204, 255, 191, 167, 51, 255, 255, 87, 204, 255, 191, 167, 51, 255, 255, 87, 204, 254, 127, 167, 51, 255, 255, 87, 204, 255, 255, 87, 204, 255, 255, 167, 51, 255, 255, 87, 204, 255, 255, 167, 51, 255, 255, 87, 204, 255, 255, 167, 51, 255, 191, 167, 51, 255, 255, 167, 51, 255, 191, 167, 51, 255, 255, 167, 51, 255, 255, 167, 51, 255, 255, 167, 51, 255, 255, 87, 204, 255, 127, 87, 204, 254, 127, 87, 204, 255, 127, 87, 204, 255, 191, 87, 204, 255, 127, 87, 204, 255, 191, 167, 51, 255, 127, 87, 204, 255, 191, 167, 51, 255, 127, 87, 204, 254, 127, 167, 51, 255, 127, 87, 204, 255, 191, 167, 51, 255, 127, 167, 51, 255, 191, 167, 51, 255, 127, 167, 51, 255, 255, 167, 51, 255, 127, 167, 51, 255, 191, 87, 204, 255, 127, 167, 51, 255, 255, 87, 204, 255, 127, 167, 51, 255, 191, 87, 204, 255, 127, 167, 51, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 254, 127, 255, 255, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 254, 127, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 254, 127, 0, 0, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 191, 255, 255, 255, 127, 0, 0, 255, 191, 255, 255, 255, 127, 255, 255, 254, 127, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 0, 0, 255, 191, 0, 0, 255, 127, 0, 0, 255, 255, 0, 0, 255, 127, 0, 0, 255, 191, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 255, 127, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 0, 0, 255, 127, 255, 127, 255, 255, 0, 0, 255, 127, 255, 255, 255, 127, 255, 127, 0, 0, 255, 127, 255, 255, 0, 0, 255, 127, 255, 255, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 0, 0, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_51bwy")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_v0cut"]
data = PackedVector3Array(1, -1, 1, -1, 1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, -1, 0.6474, 1.8903, 0.6474, -1, 1, 1, -0.6475, 1.8903, 0.6474, 0.6474, 1.8903, 0.6474, 1, 1, 1, -1, 1, 1, 0.6474, 1.8903, -0.6475, 1, 1, 1, 0.6474, 1.8903, 0.6474, 0.6474, 1.8903, -0.6475, 1, 1, -1, 1, 1, 1, -0.6475, 1.8903, 0.6474, -1, 1, -1, -0.6475, 1.8903, -0.6475, -0.6475, 1.8903, 0.6474, -1, 1, 1, -1, 1, -1, -0.6475, 1.8903, -0.6475, 1, 1, -1, 0.6474, 1.8903, -0.6475, -0.6475, 1.8903, -0.6475, -1, 1, -1, 1, 1, -1, 0.3898, 1.8903, 0.3898, -0.6475, 1.8903, 0.6474, -0.3899, 1.8903, 0.3898, 0.3898, 1.8903, 0.3898, 0.6474, 1.8903, 0.6474, -0.6475, 1.8903, 0.6474, 0.3898, 1.8903, -0.3899, 0.6474, 1.8903, 0.6474, 0.3898, 1.8903, 0.3898, 0.3898, 1.8903, -0.3899, 0.6474, 1.8903, -0.6475, 0.6474, 1.8903, 0.6474, -0.3899, 1.8903, 0.3898, -0.6475, 1.8903, -0.6475, -0.3899, 1.8903, -0.3899, -0.3899, 1.8903, 0.3898, -0.6475, 1.8903, 0.6474, -0.6475, 1.8903, -0.6475, -0.3899, 1.8903, -0.3899, 0.6474, 1.8903, -0.6475, 0.3898, 1.8903, -0.3899, -0.3899, 1.8903, -0.3899, -0.6475, 1.8903, -0.6475, 0.6474, 1.8903, -0.6475, 0.439, -0.4845, -0.439, -0.439, -0.4845, 0.439, 0.439, -0.4845, 0.439, 0.439, -0.4845, -0.439, -0.439, -0.4845, -0.439, -0.439, -0.4845, 0.439, 0.439, 3.6643, -0.439, -0.439, 3.6643, 0.439, -0.439, 3.6643, -0.439, 0.439, 3.6643, -0.439, 0.439, 3.6643, 0.439, -0.439, 3.6643, 0.439, -0.439, 1.5899, 0.439, 0.439, 3.6643, 0.439, 0.439, 1.5899, 0.439, -0.439, 1.5899, 0.439, -0.439, 3.6643, 0.439, 0.439, 3.6643, 0.439, 0.439, 1.5899, -0.439, -0.439, 3.6643, -0.439, -0.439, 1.5899, -0.439, 0.439, 1.5899, -0.439, 0.439, 3.6643, -0.439, -0.439, 3.6643, -0.439, 0.439, 1.5899, 0.439, 0.439, 3.6643, -0.439, 0.439, 1.5899, -0.439, 0.439, 1.5899, 0.439, 0.439, 3.6643, 0.439, 0.439, 3.6643, -0.439, -0.439, 1.5899, -0.439, -0.439, 3.6643, 0.439, -0.439, 1.5899, 0.439, -0.439, 1.5899, -0.439, -0.439, 3.6643, -0.439, -0.439, 3.6643, 0.439, 0.439, -0.4845, 0.439, 0.736, -0.4845, -0.736, 0.439, -0.4845, -0.439, 0.439, -0.4845, 0.439, 0.736, -0.4845, 0.736, 0.736, -0.4845, -0.736, 0.439, -0.4845, -0.439, -0.736, -0.4845, -0.736, -0.439, -0.4845, -0.439, 0.439, -0.4845, -0.439, 0.736, -0.4845, -0.736, -0.736, -0.4845, -0.736, -0.439, 1.5899, 0.439, -0.736, 1.5899, -0.736, -0.439, 1.5899, -0.439, -0.439, 1.5899, 0.439, -0.736, 1.5899, 0.736, -0.736, 1.5899, -0.736, -0.439, 1.5899, -0.439, 0.736, 1.5899, -0.736, 0.439, 1.5899, -0.439, -0.439, 1.5899, -0.439, -0.736, 1.5899, -0.736, 0.736, 1.5899, -0.736, -0.736, -0.4845, -0.736, -0.736, 1.5899, 0.736, -0.736, -0.4845, 0.736, -0.736, -0.4845, -0.736, -0.736, 1.5899, -0.736, -0.736, 1.5899, 0.736, 0.736, -0.4845, 0.736, 0.736, 1.5899, -0.736, 0.736, -0.4845, -0.736, 0.736, -0.4845, 0.736, 0.736, 1.5899, 0.736, 0.736, 1.5899, -0.736, 0.736, -0.4845, -0.736, -0.736, 1.5899, -0.736, -0.736, -0.4845, -0.736, 0.736, -0.4845, -0.736, 0.736, 1.5899, -0.736, -0.736, 1.5899, -0.736, -0.736, -0.4845, 0.736, 0.736, 1.5899, 0.736, 0.736, -0.4845, 0.736, -0.736, -0.4845, 0.736, -0.736, 1.5899, 0.736, 0.736, 1.5899, 0.736, 0.439, 1.5899, 0.439, -0.736, 1.5899, 0.736, -0.439, 1.5899, 0.439, 0.439, 1.5899, 0.439, 0.736, 1.5899, 0.736, -0.736, 1.5899, 0.736, 0.439, 1.5899, -0.439, 0.736, 1.5899, 0.736, 0.439, 1.5899, 0.439, 0.439, 1.5899, -0.439, 0.736, 1.5899, -0.736, 0.736, 1.5899, 0.736, -0.439, -0.4845, -0.439, -0.736, -0.4845, 0.736, -0.439, -0.4845, 0.439, -0.439, -0.4845, -0.439, -0.736, -0.4845, -0.736, -0.736, -0.4845, 0.736, -0.439, -0.4845, 0.439, 0.736, -0.4845, 0.736, 0.439, -0.4845, 0.439, -0.439, -0.4845, 0.439, -0.736, -0.4845, 0.736, 0.736, -0.4845, 0.736)

[sub_resource type="BoxShape3D" id="BoxShape3D_5safc"]
size = Vector3(1, 0.389648, 1)

[node name="GS" type="Node3D"]
script = ExtResource("1_n0lr4")

[node name="Cube" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.08, 0, 0, 0, 0.5, 0, 0, 0)
mesh = SubResource("ArrayMesh_eq530")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Cube"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_v0cut")

[node name="Interactable" parent="." instance=ExtResource("2_fx8x1")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.111816, 0)
shape = SubResource("BoxShape3D_5safc")

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Press
[]"
horizontal_alignment = 1

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
